--- a/public/profile.css
+++ b/public/profile.css
@@ -5,18 +5,19 @@ body  {
 div.banner 
 {
 	text-indent:0;
-	display:inline-block;
+	/*display:inline-block;*/
 	color: white;
 	text-shadow: 0 0 7px blue;
 	font-family:Trebuchet MS;
 	font-size:40px;
 	font-weight:bold;
 	font-style:normal;
-	height:30%;
-	line-height:100px;
+	/*height:30%;*/
+	/*line-height:100px;*/
 	width:100%;
 	text-decoration:none;
 	text-align:center;
+	/*margsin: 0 auto;*/
 }
 div.banner:active
  {
@@ -26,20 +27,47 @@ div.banner:active
 
 div.summary
 {
+	width: 100%;
 	font-size:27px;
 	text-shadow: 0 0 7px blue;
 	color: yellow;
+	/*display: inline-block;*/
+	text-align: center;
 }
 
 div.list
 {
+	/*float: left;*/
 	font-size:27px;
 	text-shadow: 0 0 7px blue;
 	color: yellow;
+	display: inline-block;
+}
+
+div.help
+{
+	/*float: left;*/
+	padding-top: 30px;
+	margin-left: 50px;
+	text-shadow: 0 0 7px blue;
+	color: yellow;
+	display: inline-block;
+}
+
+
+div.float{
+	/*clear:both;*/
+	/*float: center;*/
+	position:relative;
+	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+	
 }
 
 button.start 
 {
+
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #77d42a), color-stop(1, #5cb811) );
 	background:-moz-linear-gradient( center top, #77d42a 5%, #5cb811 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77d42a', endColorstr='#5cb811');
@@ -70,6 +98,9 @@ button.start
 	text-decoration:none;
 	text-align:center;
 	text-shadow:1px 1px 0px #aade7c;
+	margin-top: 50px;
+	/*width: 100%;*/
+	/*margin: 0 auto;*/
 }
 button.start:hover 
 {
